name:                cobra
version:             0.1.0.0
synopsis:            COntinous Benchmarking, Reporting, and Alerting
-- description:
homepage:            https://github.com/capitanbatata/cobra
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           Copyright: (c) 2017 Damian Nadales
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cobra
                     , CobraOpts
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , turtle
                     , text
                     , classy-prelude
                     , parsec
                     , filestore
                     , foldl
                     
  default-language:    Haskell2010

executable cobra
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cobra
  default-language:    Haskell2010

test-suite cobra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cobra
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capitanbatata/cobra
