name:                benchmarks-example
version:             0.1.0.0
synopsis:            Example of a benchmarking program to be run by COBRA.
-- description:
homepage:            https://github.com/capitanbatata/cobra/test/data/benchmarks-example#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           Copyright: (c) 2017 Damian Nadales
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror -O
  default-language:    Haskell2010

executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  build-depends:       base
                     , benchmarks-example
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             LibBench.hs
  build-depends:       base
                     , criterion
                     , temporary
                     , aeson
                     , lens
                     , lens-aeson
                     , bytestring
                     , text
                     
                     , benchmarks-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

  
source-repository head
  type:     git
  location: https://github.com/capitanbatata/cobra/test/data/benchmarks-example
